# src/app/api/api/api.ts
@@ -6,6 +6,8 @@ export * from './basicErrorController.service';
 import { BasicErrorControllerService } from './basicErrorController.service';
 export * from './courseController.service';
 import { CourseControllerService } from './courseController.service';
+export * from './courseEnrollmentController.service';
+import { CourseEnrollmentControllerService } from './courseEnrollmentController.service';
 export * from './userController.service';
 import { UserControllerService } from './userController.service';
-export const APIS = [AssignmentControllerService, AuthenticationControllerService, BasicErrorControllerService, CourseControllerService, UserControllerService];
+export const APIS = [AssignmentControllerService, AuthenticationControllerService, BasicErrorControllerService, CourseControllerService, CourseEnrollmentControllerService, UserControllerService];
