# src/app/api/model/courseEnrollmentDetailsDto.ts
@@ -1,0 +1,22 @@
+/**
+ * Api Documentation
+ * Api Documentation
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface CourseEnrollmentDetailsDto { 
+    courseId?: number;
+    enrollmentId?: number;
+    status?: string;
+    userFirstName?: string;
+    userId?: number;
+    userLastName?: string;
+}
+
